# audio-widget

./: .todo  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  index.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: manager.rs
src-tauri/src/commands/: audio.rs  media.rs  mod.rs  settings.rs
src-tauri/src/events/: audio.rs  media.rs  mod.rs
src-tauri/src/models/: volume.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/p_windows/: audio.bk  com.rs  mod.rs
src-tauri/src/platform/p_windows/audio/: callback.rs  device.rs  endpoint.rs  listener.rs  manager.rs  mod.rs
src-tauri/src/platform/p_windows/media/: manager.rs
src-tauri/src/services/: audio_service.rs  media_service.rs  mod.rs  settings_service.rs  tray_service.rs  window_service.rs
src-tauri/src/state/: audio.rs  media.rs  mod.rs  tray.rs  ui.rs
src-tauri/src/ui/settings/: manager.rs  mod.rs  models.rs  repository.rs
src-tauri/src/ui/tray/: events.rs  ids.rs  menu.rs  mod.rs
src-tauri/src/ui/window/: labels.rs  mod.rs  settings.rs
src/animations/: widget.ts
src/components/: DragLayer.tsx  FloatingWidget.tsx
src/events/: widget.ts
src/hooks/: useAudio.ts  useDragClick.ts  useMedia.ts  useSettings.ts  useVolumeWheel.ts  useWidgetState.ts  useWindowEngine.ts  useWindowEvent.ts
src/services/: audio-sync.ts  audio.service.ts  audio.ts  media.ts  settings.ts
src/stores/: media.ts  ripple.ts  settings.ts  volume.ts  (+2 more)
(+35 files in other folders)
